<resources>
    <string name="app_name">Example App</string>
    <string name="F_name">First Name</string>
    <string name="M_name">Middle Name</string>
    <string name="L_name">Last Name</string>
    <string name="M_no">Mobile Number</string>
    <string name="Address">Address</string>

    <string name="submit">Submit Detail</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
